8304954: SegmentedCodeCache fails when using large pages

Reviewed-by: phh
Backport-of: cad6114e1c69bfebe5f7892c3e105b4c70d04398